# realSpike

./: .gitignore  LICENSE  MANIFEST.in  README.md  acquisition.md  notes.md  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
latency/: generator_acquisition_debug_False_netgear_True_latency.pkl  processor_acquisition_latency_netgear.pkl
notebooks/: MUA.ipynb  MUA_checks.ipynb  MUA_speedup.ipynb  Untitled.ipynb  buffer-viz.ipynb  check_fetch.ipynb  check_spikeglx.ipynb  compression.ipynb  fetch_netgear.ipynb  fix-viz2.ipynb  latency.ipynb  latency_acquire.ipynb  median.ipynb  mock_acquire.ipynb  patterns.ipynb  seeded-median.ipynb  stream-median.ipynb  viz-fix.ipynb
notebooks/dim_reduction/: LSSM.ipynb  PCA_stim.ipynb  PLDS.ipynb  PLDS_behavior.ipynb  PLDS_inputs.ipynb  PLDS_stim.ipynb  PLDS_stim_moredim.ipynb  PSLDS.ipynb  PSLDS_stim.ipynb  dynamax_poisson_LDS.ipynb  pro-svd.ipynb  ssm_PLDS_hyperparams.ipynb  ssm_poisson_LDS.ipynb
notebooks/pro-svd/: PCA_control.ipynb  PCA_single_trial_control.ipynb  PCA_single_trial_control_baseline.ipynb  PCA_single_trial_stim.ipynb  PCA_stim.ipynb  PCA_stim_only.ipynb  load_data.ipynb  pro-svd.ipynb
real_spike/: __init__.py  _version.py  latency_df.h5  practice_acquire.py  sampling_rates.py  spikeglx.yaml  utils.py
real_spike/acquisition/: acquisition.yaml  fpl_viz.py  latency_checks.py  local_acquisition.py  practice_acquire.py  spikeglx.yaml
real_spike/actors/: acquire.py  viz.py
real_spike/aquisition/: spikeglx.yaml
real_spike/aqusition/: practice_acquire.py  sampling_rates.py  spikeglx.yaml
real_spike/behavior_camera/: detect.yaml
real_spike/behavior_detector/: README.md  detect.yaml  viz.py
real_spike/behavior_detector_modified/: detect.yaml
real_spike/behavior_fixed_stim/: README.md  (+1 more)
scripts/: README.md  bah.py  check_cue.py  check_netgear.py  check_psychopy.py  fpl_viz.py  latency_checks.py  local_acquisition.py  practice_acquire.py  psychopy_viz.py  psychopy_viz_windows.py  psychopy_viz_windows_modified.py  simulate_cue.py  simulate_frame_gen.py  simulate_frames.py  viz.py
timing/: test-improv-duke_2026-01-04_14:58:58.pkl  test-psychopy-duke_2026-01-04_14-58-58.pkl  test-psychopy_2026-01-06_18-09-25.pkl  test-psychopy_2026-01-06_18-12-05.pkl
(+143 files in other folders)
